# ApiDeTarefas

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/: cleanDb.py  main.py  secret.py
tasks/: package-lock.json  package.json
tasks/public/: index.html
tasks/src/: App.js  index.css
tasks/src/api/: Axios.js
tasks/src/componentes/: Header.js  Home.js
