[tool.poetry]
name = "api-busca-desktop"
version = "0.1.0"
description = ""
authors = ["Anderson <eusouanderson@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pytest = "^7.4.3"
pymongo = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
